[package]
name = "pug"
version = "0.2.0"
authors = ["Arvid E. Picciani <aep@exys.org>", "Blair Noctis <n@sail.ng>"]
edition = '2021'
license = "MIT"
description = "pug.js port to Rust"
repository = "https://github.com/bnoctis/pug-rs"
readme = "README.md"
keywords = ["pug", "jade", "template"]
categories = ["command-line-utilities", "parsing", "web-programming", "template-engine"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.5"
pest_derive = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
